Updated work header to be more security focused

--- a/index.html
+++ b/index.html
@@ -157,15 +157,14 @@
 								</header>
 								<p>
 									I have a wide variety of academic and work interests, and have run the gamut of
-									computer science subfields. I have deep interest in Computational Sciences, using computers
-									to solve problems in science, and my employment has always been in this field.
-									Particularly I love the cross disciplinary aspect of Computational Science, which has
-									allowed me to do work in Artificial intelligence while also learning about the Scientific
-									domain of study and the mathematics it is built on. I also have interests in computer security
-									and functional programming. Ultimately my interest in Computer Science is a philosophical
-									one of how to think through problems and answer tough questions. This belongs to no single
-									domain of Computer Science, nor is it exclusive to Computer Science. As such, any work that
-									involves tough questions requiring methodical solutions is of interest to me.
+									computer science subfields. I have a deep interest in computer security and the
+									methods for protecting users data. I greatly enjoy the process of analyzing
+									programs from an attackers view and finding creative solution to find and patch
+									vulnerabilities. Ultimately my interest in Computer Science is a philosophical
+									one of how to think through problems and answer tough questions. This belongs to
+									no single domain of Computer Science, nor is it exclusive to Computer Science. As
+									such, any work that involves tough questions requiring methodical solutions is of
+									interest to me.
 								</p>
 								<!-- CV -->
 								<span class="icon solid fa-file fa-lg">&nbsp;&nbsp;Curriculum Vitae</span><br>
