--- a/index.html
+++ b/index.html
@@ -271,16 +271,23 @@
 										<div class="col-2 col-12-small">
 											Python
 										</div><div class="col-10 col-12-small">
-											Primary language I use in my current job and throughout college. Deep familiarity 
+											Primary language I used in college and personal projects. Deep familiarity 
 											with core libraries and language features. I also have experience with Numpy, 
 											SciPy, Pandas, Pwntools, Scapy, Tkinter, MatPlotLib, and Pillow.
 										</div>
 									</div>
 									<div class="row text-row">
 										<div class="col-2 col-12-small">
+											Go
+										</div><div class="col-10 col-12-small">
+											Used in current job. Familiarity with basic language mechanics.
+										</div>
+									</div>
+									<div class="row text-row">
+										<div class="col-2 col-12-small">
 											Java
 										</div><div class="col-10 col-12-small">
-											Used in current job and in past college courses. Familiarity with features of the
+											Used in past job and in past college courses. Familiarity with features of the
 											language and core libraries. Experience with Maven, Log4j, JUnit, and Neo4j.
 										</div>
 									</div>
