Updated games header

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 									virtue ethics emphasized the identification of what is within our control and was the basis
 									for Cognitive Behavioral Therapy.
 								</p>
-								<span class="icon solid fa-dice fa-lg">&nbsp;&nbsp;Games</span><br>
+								<span class="icon solid fa-dice fa-lg">&nbsp;&nbsp;Gaming</span><br>
 								<p>
 									During graduate school, Dungeons and Dragons served as an important outlet for me and members
 									of my research lab to unwind. I first played D&D as a child and have loved it ever since. I
