Updated programming languages and experience

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <html>
 	<head>
 		<title>Zackary Crosley Computer Scientist</title>
-    	<meta name="description" content="Computer Scientist, Programming Language Nerd, Security and Privacy Advocate, Computational Modeling">
+    	<meta name="description" content="Computer Scientist, Programming Language Nerd, Security and Privacy Obsessive">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -240,7 +240,8 @@
 											independent of the object. This has the extra benefit of enabling these methods to be repurposed by other
 											developers, who have used the resulting library for various projects. As part of my functional paradigm
 											exploration, I studied Okasaki's foundational paper Purely Functional Data Structures, and utilize his
-											techniques regularly to improve my code (lazy evaluation, memoization, and immutability).
+											techniques regularly to improve my code (lazy evaluation, memoization, and immutability). Recently I
+                                            have become interesting in the functional package manager Nix for system configuration and automation.
 										</div>
 									</div>
 								</section>
@@ -269,26 +270,20 @@
 								<section style="margin-bottom: 2em;">
 									<div class="row text-row">
 										<div class="col-2 col-12-small">
+											Go
+										</div><div class="col-10 col-12-small">
+											Used at Censys to develop microservices. Knowledgeable of language mechanics
+                                            and common tools for service development; including cloud libraries, database
+                                            management, API development, testing, and telemetry tracking.
+										</div>
+									</div>
+									<div class="row text-row">
+										<div class="col-2 col-12-small">
 											Python
 										</div><div class="col-10 col-12-small">
 											Primary language I used in college and personal projects. Deep familiarity 
 											with core libraries and language features. I also have experience with Numpy, 
 											SciPy, Pandas, Pwntools, Scapy, Tkinter, MatPlotLib, and Pillow.
-										</div>
-									</div>
-									<div class="row text-row">
-										<div class="col-2 col-12-small">
-											Go
-										</div><div class="col-10 col-12-small">
-											Used in current job. Familiarity with basic language mechanics.
-										</div>
-									</div>
-									<div class="row text-row">
-										<div class="col-2 col-12-small">
-											Java
-										</div><div class="col-10 col-12-small">
-											Used in past job and in past college courses. Familiarity with features of the
-											language and core libraries. Experience with Maven, Log4j, JUnit, and Neo4j.
 										</div>
 									</div>
 									<div class="row text-row">
@@ -321,6 +316,14 @@
 									</div>
 									<div class="row text-row">
 										<div class="col-2 col-12-small">
+											Java
+										</div><div class="col-10 col-12-small">
+											Used in past job and in past college courses. Familiarity with features of the
+											language and core libraries. Experience with Maven, Log4j, JUnit, and Neo4j.
+										</div>
+									</div>
+									<div class="row text-row">
+										<div class="col-2 col-12-small">
 											C#
 										</div>
 										<div class="col-10 col-12-small">
@@ -349,12 +352,6 @@
 									mine, but my interest in returning to it grew during pandemic lockdown. My partner, our dog, and I have
 									begun backpacking again with a goal of completing a rim to rim trip of the Grand Canyon.
 								</p>	
-								<span class="icon solid fa-bullseye fa-lg">&nbsp;&nbsp;Archery</span><br>
-								<p>
-									Archery is a sport I was also introduced to during my time in Scouts and quickly grew to love.
-									I find something more enticing with archery than other shooting sports - there is something very
-									primal about shooting a bow. I would like to do more 3D shooting in the future.
-								</p>	
 								<span class="icon solid fa-utensils fa-lg">&nbsp;&nbsp;Cooking</span><br>
 								<p>
 									Cooking began as a necessity, not an interest. In college my roommate and I were living
@@ -380,12 +377,12 @@
 									virtue ethics emphasized the identification of what is within our control and was the basis
 									for Cognitive Behavioral Therapy.
 								</p>
-								<span class="icon solid fa-dice fa-lg">&nbsp;&nbsp;Gaming</span><br>
+								<span class="icon solid fa-bullseye fa-lg">&nbsp;&nbsp;Archery</span><br>
 								<p>
-									During graduate school, Dungeons and Dragons served as an important outlet for me and members
-									of my research lab to unwind. I first played D&D as a child and have loved it ever since. I
-									also enjoy a great variety of games, from strategy games to first person shooters.
-								</p>
+									Archery is a sport I was also introduced to during my time in Scouts and quickly grew to love.
+									I find something more enticing with archery than other shooting sports - there is something very
+									primal about shooting a bow. I would like to do more 3D shooting in the future.
+								</p>	
 							</article>
 
 					</div>
