Separate out text into separate files

--- a/index.html
+++ b/index.html
@@ -81,14 +81,7 @@
 									<h2>About</h2>
 								</header>
 								<p>
-									I have always had a strong desire to understand the world. I have a 
-									passion for math and science as instruments for that understanding, and
-									read widely on these topics throughout my life. I wrote my first line of
-									code as a member of my high school Robotics team, and have been pursuing
-									it as a process for understanding how to think ever since. My appetite for
-									learning is just as strong today, and I am interested in a wide variety of
-									topics. I am always interested in solving unique and challenging problems,
-									usually with the aid of computer. If you have any such problems, contact me!
+									<embed src="text/about.txt">
 								</p>
 								<!-- Education Section -->
 								<span class="icon solid fa-graduation-cap fa-lg">&nbsp;&nbsp;Education</span><br>
@@ -156,15 +149,7 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									I have a wide variety of academic and work interests, and have run the gamut of
-									computer science subfields. I have a deep interest in computer security and the
-									methods for protecting users data. I greatly enjoy the process of analyzing
-									programs from an attackers view and finding creative solution to find and patch
-									vulnerabilities. Ultimately my interest in Computer Science is a philosophical
-									one of how to think through problems and answer tough questions. This belongs to
-									no single domain of Computer Science, nor is it exclusive to Computer Science. As
-									such, any work that involves tough questions requiring methodical solutions is of
-									interest to me.
+									<embed src="text/work.txt">
 								</p>
 								<!-- CV -->
 								<span class="icon solid fa-file fa-lg">&nbsp;&nbsp;Curriculum Vitae</span><br>
@@ -179,34 +164,14 @@
 											Computer Security
 										</div>
 										<div class="col-12">
-											In graduate school, I worked with the <a href="https://sefcom.asu.edu/">Security Engineering for Future
-											Computing (SEFCOM)</a> lab for my thesis and significant coursework. In classes led by SEFCOM faculty,
-											I learned the techniques for binary, web, and  network security. This included techniques like Buffer
-											Overflows, Format String exploits, Loop Overflows (Off-by-One exploits), Return Oriented Programming,
-											Spoofing (ARP, IP, TCP), Cross Site Scripting, and SQL Injection. I also learned the use of binary
-											reverse engineering tools like Ada. These techniques were employed with the Capture the Flag (CTF) team
-											the pwndevils. Pwndevils was established by Shellphish alumni and worked closely with the team, frequently
-											attending DEFCOM CTF events with them. My research project for my thesis was the application of inductive
-											programming techniques to exploit generation, which enabled the learning of basic expoits from examples
-											in a CTF environment. This research is ongoing and pending future publication. My current role with
-											Censys involves development of the Attack Surface Management Risks platform, which enables users to 
-											identify vulnerabilities in their internet facing devices.
+											<embed src="text/security.txt">
+										</div>
 									<div class="row text-row">
 										<div class="col-12">
 											Artificial Intelligence
 										</div>
 										<div class="col-12">
-											During both my undergaduate and graduate degree I took multiple courses in artificial intelligence
-											techniques, including heuristic searches, classifiers, clustering, and reinforcement learning. My
-											graduate work included the mathematical foundations for algorithms like SVM, Naive Bayes, Logistic
-											Regression, Locality Sensitive Hashing, and Markov Decision Processes. My employment with the Navy
-											involved the development of genetic algorithms to optimize aircraft Tactics, Techniques, and Procedures
-											(TTPs). In my current employment with the Army, I have developed a navigation system which generates
-											a graph data structure from the terrain to enable intelligent path identification via heuristic
-											searches, like A* and Djikstra, and optimization techniques like Ant Colony Optimization. I have
-											also developed an architecture for Utility-driven AI which is used to define adaptive behaviors. The
-											methodology for my thesis research, inductive programming, an AI technique that uses Directed
-											Acyclic Graph (DAG) intersections to learn from examples.
+											<embed src="text/ai.txt">
 										</div>
 									</div>
 									<div class="row text-row">
@@ -214,17 +179,7 @@
 											Scientific Computing
 										</div>
 										<div class="col-12">
-											My professional career has been spent with the Department of Defense working in the field of 
-											Computational Sciences, specifically Combat Modeling. My first job with the Navy involved development
-											of a deterministic, closed-form simulation used to evaluate aircraft Tactics, Techniques, and
-											Procedures (TTPs). This simulation mutated Subject Matter Expert (SME) encoded strategies across
-											a variety of scenarios to evaluate effectiveness of alternative TTPs. Our work involved not only
-											algorithm development but the maintenance of the two hundred node, Windows Server cluster computer
-											on which they were run. My work included performing updates and developing utilities for job
-											submission and server maintenance. My current job is working on an Army closed-form, Monte Carlo, 
-											discrete event combat simulator used for analysis of acquisition decisions. I have worked on defining
-											automated and intelligent behaviors for entities within the simulation as well as extending the
-											simulation to model new functionalities.
+											<embed src="text/sc.txt">
 										</div>
 									</div>
 									<div class="row text-row">
@@ -232,16 +187,7 @@
 											Functional Programming
 										</div>
 										<div class="col-12">
-											Since learning functional programming, I employ its techniques with growing regularity as a useful
-											methodology for solving data transformation driven problems. Clojure is the most functional programming
-											language I have used, but I reguarly apply the functional programming features of languages like Python
-											and Java to create simpler solutions. The navigation suite I developed for the Army is mostly functional,
-											with a Graph object that merely manages basic state information and all other methods being written
-											independent of the object. This has the extra benefit of enabling these methods to be repurposed by other
-											developers, who have used the resulting library for various projects. As part of my functional paradigm
-											exploration, I studied Okasaki's foundational paper Purely Functional Data Structures, and utilize his
-											techniques regularly to improve my code (lazy evaluation, memoization, and immutability). Recently I
-                                            have become interesting in the functional package manager Nix for system configuration and automation.
+											<embed src="text/functional.txt">
 										</div>
 									</div>
 								</section>
