set type for embed to plain text

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<h2>About</h2>
 								</header>
 								<p>
-									<embed src="text/about.txt">
+									<embed src="text/about.txt" type="text/plain">
 								</p>
 								<!-- Education Section -->
 								<span class="icon solid fa-graduation-cap fa-lg">&nbsp;&nbsp;Education</span><br>
@@ -149,7 +149,7 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									<embed src="text/work.txt">
+									<embed src="text/work.txt" type="text/plain">
 								</p>
 								<!-- CV -->
 								<span class="icon solid fa-file fa-lg">&nbsp;&nbsp;Curriculum Vitae</span><br>
@@ -164,14 +164,14 @@
 											Computer Security
 										</div>
 										<div class="col-12">
-											<embed src="text/security.txt">
+											<embed src="text/security.txt" type="text/plain">
 										</div>
 									<div class="row text-row">
 										<div class="col-12">
 											Artificial Intelligence
 										</div>
 										<div class="col-12">
-											<embed src="text/ai.txt">
+											<embed src="text/ai.txt" type="text/plain">
 										</div>
 									</div>
 									<div class="row text-row">
@@ -179,7 +179,7 @@
 											Scientific Computing
 										</div>
 										<div class="col-12">
-											<embed src="text/sc.txt">
+											<embed src="text/sc.txt" type="text/plain">
 										</div>
 									</div>
 									<div class="row text-row">
@@ -187,7 +187,7 @@
 											Functional Programming
 										</div>
 										<div class="col-12">
-											<embed src="text/functional.txt">
+											<embed src="text/functional.txt" type="text/plain">
 										</div>
 									</div>
 								</section>
