fix(about): update personal statement

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<!--
+<span display="none">
 	Astral by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
@@ -37,12 +37,12 @@
 
 	[NOTE you could always look at the github repo for the answer, but thats no fun]
 
--->
+</span>
 <html>
 
 <head>
-	<title>Zackary Crosley Computer Scientist</title>
-	<meta name="description" content="Computer Scientist, Programming Language Nerd, Security and Privacy Obsessive">
+	<title>Zackary Crosley Software Engineer</title>
+	<meta name="description" content="Software Engineer, Programming Language Nerd, Security and Privacy Obsessive">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -71,7 +71,7 @@
 			<article id="home" class="panel intro">
 				<header>
 					<h1>Zackary Crosley</h1>
-					<p>Computer Scientist</p>
+					<p>Software Engineer</p>
 				</header>
 				<a href="#about" class="jumplink pic">
 					<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
@@ -85,14 +85,11 @@
 					<h2>About</h2>
 				</header>
 				<p>
-					I have always had a strong desire to understand the world. I have a
-					passion for math and science as instruments for that understanding, and
-					read widely on these topics throughout my life. I wrote my first line of
-					code as a member of my high school Robotics team, and have been pursuing
-					it as a process for understanding how to think ever since. My appetite for
-					learning is just as strong today, and I am interested in a wide variety of
-					topics. I am always interested in solving unique and challenging problems,
-					usually with the aid of computer. If you have any such problems, contact me!
+					I am a backend software engineer with a passion for writing code, the outdoors, and coffee.
+					I got my start writing code in 2010 with a high school robotics team, and have been fascinated
+					by it ever since. Software is not just a powerful and flexible tool in the modern world, but
+					a way to think about problems. Finding problems, understanding them, and solving them is what
+					being an engineer is all about. If you have any challenging problems, I would love to hear from you!
 				</p>
 				<!-- Education Section -->
 				<span class="icon solid fa-graduation-cap fa-lg">&nbsp;&nbsp;Education</span><br>
@@ -178,6 +175,22 @@
 				<section style="margin-bottom: 2em;">
 					<div class="row text-row">
 						<div class="col-12">
+							Software Engineering
+						</div>
+						<div class="col-12">
+							It is not enough to simply write code, but to deliver working code to the user. This
+							requires CI/CD, containerization, microservices, performance monitoring, testing, and more. My
+							experience with Censys has given me a large amount of experience in these areas. I have constructed
+							data pipelines to ingest web data, transform that data into risks and vulnerabilities, and deliver
+							that data to the user via a web portal and APIs. I have built gRPC microservices to support 
+							individual features of the Censys product. I have defined containers for each of these microservices
+							and the associated Kubernetes charts. I have configured services with OpenTelemetry for observability
+							and alerting. Learning how to write code that is easy to read, performant, and secure is a continual
+							learning process, and I am always looking for ways to improve my capabilities.
+						</div>
+					</div>
+					<div class="row text-row">
+						<div class="col-12">
 							Computer Security
 						</div>
 						<div class="col-12">
@@ -185,74 +198,72 @@
 							for Future Computing (SEFCOM)</a> lab for my thesis and significant coursework. In classes led by
 							SEFCOM faculty, I learned the techniques for binary, web, and network security. This included techniques
 							like Buffer Overflows, Format String exploits, Loop Overflows (Off-by-One exploits), Return Oriented
-							Programming, Spoofing (ARP, IP, TCP), Cross Site Scripting, and SQL Injection. I also learned the use
-							of binary reverse engineering tools like Ada. These techniques were employed with the Capture the Flag 
-							(CTF) team the pwndevils. Pwndevils was established by Shellphish alumni and worked closely with the
-							team, frequently attending DEFCOM CTF events with them. My research project for my thesis was the
-							application of inductive programming techniques to exploit generation, which enabled the learning of
+							Programming, Spoofing (ARP, IP, TCP), Cross Site Scripting, and SQL Injection. These techniques were employed
+							with the Capture the Flag (CTF) team the pwndevils. Pwndevils was established by Shellphish alumni and worked
+							closely with the team, frequently attending DEFCOM CTF events with them. My research project for my thesis
+							was the application of inductive programming techniques to exploit generation, which enabled the learning of
 							basic expoits from examples in a CTF environment. This research is ongoing and pending future publication.
-							My current role with Censys involves development of the Attack Surface Management Risks platform, which
-							enables users to identify vulnerabilities in their internet facing devices. Using internet wide scan data,
-							we identify possible vulnerabilities, and display them to the user via a web portal and APIs.
+							My role with Censys was development of tools like <a href="https://censys.com/platform">Platform</a> advantages
+							<a href="https://censys.com/solutions/attack-surface-management">Exposure Management</a> to enable users to
+							identify vulnerabilities in their internet facing devices. Using internet wide scan data, we identified
+							exposures and possible vulnerabilities and displayed them to the user via a web portal and APIs.
 						</div>
-						<div class="row text-row">
-							<div class="col-12">
-								Artificial Intelligence
-							</div>
-							<div class="col-12">
-								During both my undergaduate and graduate degree I took multiple courses in artificial
-								intelligence techniques, including heuristic searches, classifiers, clustering, and
-								reinforcement learning. My graduate work included the mathematical foundations for algorithms
-								like SVM, Naive Bayes, Logistic Regression, Locality Sensitive Hashing, and Markov Decision
-								Processes. My employment with the Navy involved the development of genetic algorithms to
-								optimize aircraft Tactics, Techniques, and Procedures (TTPs). In my career with the Army, I
-								developed a navigation system which generated a graph data structure from the terrain to enable
-								intelligent path identification via heuristic searches, like A* and Djikstra, and optimization
-								techniques like Ant Colony Optimization. I have also developed an architecture for Utility-driven
-								AI which is used to define adaptive behaviors. The methodology for my thesis research, inductive
-								programming, is an AI technique that uses Directed Acyclic Graph (DAG) intersections to learn
-								from examples.
-							</div>
+					</div>
+					<div class="row text-row">
+						<div class="col-12">
+							Artificial Intelligence
 						</div>
-						<div class="row text-row">
-							<div class="col-12">
-								Scientific Computing
-							</div>
-							<div class="col-12">
-								My career with the Department of Defense was in the field of Computational Sciences,
-								specifically Combat Modeling. My first job with the Navy involved development of a
-								deterministic, closed-form simulation used to evaluate aircraft Tactics, Techniques,
-								and Procedures (TTPs). This simulation mutated Subject Matter Expert (SME) encoded
-								strategies across a variety of scenarios to evaluate effectiveness of alternative TTPs.
-								Our work involved not only algorithm development but the maintenance of the two hundred
-								node, Windows Server cluster computer on which they were run. My work included performing
-								updates and developing utilities for job submission and server maintenance. My role at the
-								Army involved working a closed-form, Monte Carlo, discrete event combat simulator used for
-								analysis of acquisition decisions. I have worked on defining automated and intelligent
-								behaviors for entities within the simulation as well as extending the simulation to model
-								new functionalities.
-							</div>
+						<div class="col-12">
+							I took multiple courses in artificial intelligence techniques, including heuristic searches,
+							classifiers, clustering, and reinforcement learning. My graduate work included the mathematical
+							foundations for algorithms like SVM, Naive Bayes, Logistic Regression, Locality Sensitive Hashing,
+							and Markov Decision Processes. My employment with the Navy involved the development of genetic
+							algorithms to optimize aircraft Tactics, Techniques, and Procedures (TTPs). In my career with the
+							Army, I developed a navigation system which generated a graph data structure from the terrain to
+							enable intelligent path identification via heuristic searches, like A* and Djikstra, and optimization
+							techniques like Ant Colony Optimization. I have also developed an architecture for Utility-driven
+							AI which is used to define adaptive behaviors. The methodology for my thesis research, inductive
+							programming, is an AI technique that uses Directed Acyclic Graph (DAG) intersections to learn
+							from examples.
 						</div>
-						<div class="row text-row">
-							<div class="col-12">
-								Functional Programming
-							</div>
-							<div class="col-12">
-								Since learning functional programming, I employ its techniques with growing regularity
-								as a useful methodology for solving data transformation driven problems. Clojure is the
-								most functional programming language I have used, but I reguarly apply the functional
-								programming features of languages like Python and Java to create simpler solutions. The
-								navigation suite I developed for the Army is mostly functional, with a Graph object that
-								merely manages basic state information and all other methods being written independent of
-								the object. This has the extra benefit of enabling these methods to be repurposed by other
-								developers, who have used the resulting library for various projects. As part of my
-								functional paradigm exploration, I studied Okasaki's foundational paper Purely Functional
-								Data Structures, and utilize his techniques regularly to improve my code (lazy evaluation,
-								memoization, and immutability). Recently I have become interesting in the functional package
-								manager Nix for system configuration and immutable operating systems as an extension of this
-								interest.
-							</div>
+					</div>
+					<div class="row text-row">
+						<div class="col-12">
+							Scientific Computing
 						</div>
+						<div class="col-12">
+							My career with the Department of Defense was in the field of Computational Sciences,
+							specifically Combat Modeling. My first job with the Navy involved development of a
+							deterministic, closed-form simulation used to evaluate aircraft Tactics, Techniques,
+							and Procedures (TTPs). This simulation mutated Subject Matter Expert (SME) encoded
+							strategies across a variety of scenarios to evaluate effectiveness of alternative TTPs.
+							Our work involved not only algorithm development but the maintenance of the two hundred
+							node, Windows Server cluster computer on which they were run. My work included performing
+							updates and developing utilities for job submission and server maintenance. My role at the
+							Army involved working a closed-form, Monte Carlo, discrete event combat simulator used for
+							analysis of acquisition decisions. I have worked on defining automated and intelligent
+							behaviors for entities within the simulation as well as extending the simulation to model
+							new functionalities.
+						</div>
+					</div>
+					<div class="row text-row">
+						<div class="col-12">
+							Functional Programming
+						</div>
+						<div class="col-12">
+							Since learning functional programming, I employ its techniques with growing regularity
+							as a useful methodology for solving data transformation driven problems. Clojure is the
+							most functional programming language I have used, but I reguarly apply the functional
+							programming features of languages like Python and Java to create simpler solutions. The
+							navigation suite I developed for the Army is mostly functional, with a Graph object that
+							merely manages basic state information and all other methods being written independent of
+							the object. This has the extra benefit of enabling these methods to be repurposed by other
+							developers, who have used the resulting library for various projects. As part of my
+							functional paradigm exploration, I studied Okasaki's foundational paper Purely Functional
+							Data Structures, and utilize his techniques regularly to improve my code (lazy evaluation,
+							memoization, and immutability).
+						</div>
+					</div>
 				</section>
 				<!-- Publications Section -->
 				<span class="icon solid fa-book-open fa-lg">&nbsp;&nbsp;Publications</span><br>
@@ -284,9 +295,9 @@
 							Go
 						</div>
 						<div class="col-10 col-12-small">
-							Used at Censys to develop microservices. Knowledgeable of language mechanics
-							and common tools for service development; including cloud libraries, database
-							management, API development, testing, and telemetry tracking.
+							Used at Censys to develop microservices and recent personal projects. Knowledgeable
+							of language mechanics and common tools for service development; including cloud
+							libraries, database management, API development, testing, and telemetry tracking.
 						</div>
 					</div>
 					<div class="row text-row">
@@ -294,9 +305,9 @@
 							Python
 						</div>
 						<div class="col-10 col-12-small">
-							Primary language I used in college and personal projects. Deep familiarity
-							with core libraries and language features. I also have experience with Numpy,
-							SciPy, Pandas, Pwntools, Scapy, Tkinter, MatPlotLib, and Pillow.
+							Primary language I used in college and Navy career. Deep familiarity with
+							core libraries and language features. I also have experience with Numpy,
+							Scipy, Pandas, Pwntools, Scapy, Tkinter, MatPlotLib, and Pillow.
 						</div>
 					</div>
 					<div class="row text-row">
@@ -343,8 +354,8 @@
 							C#
 						</div>
 						<div class="col-10 col-12-small">
-							Used for personal projects and college courses. Worked with members of
-							BSA to produce a registration system. Familiar with Entity framework and ASP.NET.
+							Used for personal projects and college courses. Worked with members of Boy Scouts of
+							America to produce a registration system. Familiar with Entity framework and ASP.NET.
 						</div>
 					</div>
 				</section>
@@ -381,8 +392,8 @@
 				<span class="icon solid fa-dumbbell fa-lg">&nbsp;&nbsp;Weightlifting</span><br>
 				<p>
 					Weightlifting is a necessary training to gain and maintain the strength I need for other
-					activities, like archery and rock climbing. Beyond that my regular visits to the gym organize
-					my day and motivate me. My current weightlifting goal is to build strength, increasing the
+					activities, like rock climbing. Beyond that my regular visits to the gym organize my day
+					and motivate me. My current weightlifting goal is to build strength, increasing the
 					weight for compound lifts to help improve my rock climbing.
 				</p>
 				<span class="icon solid fa-balance-scale fa-lg">&nbsp;&nbsp;Philosophy</span><br>
@@ -394,12 +405,12 @@
 					virtue ethics emphasized the identification of what is within our control and was the basis
 					for Cognitive Behavioral Therapy.
 				</p>
-				<span class="icon solid fa-bullseye fa-lg">&nbsp;&nbsp;Archery</span><br>
+				<!-- <span class="icon solid fa-bullseye fa-lg">&nbsp;&nbsp;Archery</span><br>
 				<p>
 					Archery is a sport I was also introduced to during my time in Scouts and quickly grew to love.
 					I find something more enticing with archery than other shooting sports - there is something very
 					primal about shooting a bow. I would like to do more 3D shooting in the future.
-				</p>
+				</p>-->
 			</article>
 
 		</div>
